feat: env, login, logout 기능 구현
- env 값을 읽어 드릴 수 있도록 수정
- login, logout 기능 구현을 위한 swqgger포맷 및 기본 포맷 정의
- jwt 관련 로직 추가 검토
- database 관련 안정 로직 수정 보완
